package ecommerce;

public class AppEcommerce {
    public static void main(String[] args) {
        Tienda.iniciarPago();
    }
}

