package ecommerce;

abstract class MetodoPago {

    public abstract void procesarPago(double importe);
}